--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "token-lists",
   "version": "2.28.0",
   "main": "dist/index.js",
-  "type": "module",
   "license": "MIT",
   "private": true,
   "scripts": {
     "build": "rm -rf ./dist && rollup -c",
     "checksum": "bun run index.ts checksum",
     "generate": "bun run index.ts generate",
-    "makelist": "bun run index.ts makelist",
+    "makelist": "ts-node src/index.ts makelist",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "fetch": "bun run index.ts fetch",
     "test": "jest",
@@ -20,9 +19,7 @@
     "@pancakeswap/token-lists": "^0.0.8",
     "@typechain/ethers-v5": "^9.0.0",
     "ajv": "6.12.2",
-    "aptos": "^1.3.16",
     "axios": "^0.26.0",
-    "bun": "^0.8.0",
     "ethers": "^5.5.4",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
@@ -30,7 +27,7 @@
     "slugify": "^1.6.0",
     "tslib": "^2.4.0",
     "typechain": "^7.0.0",
-    "viem": "^1.7.0"
+    "viem": "^1.8.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.14.1",
@@ -41,7 +38,6 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "^15.0.2",
     "babel-jest": "^29.6.4",
-    "bun-types": "^0.8.0",
     "jest": "^29.6.4",
     "rollup": "^2.47.0",
     "ts-jest": "^29.1.1",
