--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest": "^29.6.4",
     "rollup": "^2.47.0",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
