--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@babel/preset-typescript": "^7.13.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@types/isomorphic-fetch": "^0.0.36",
     "@types/jest": "^29.5.4",
     "@types/lodash": "^4.14.182",
     "@types/node": "^15.0.2",
     "babel-jest": "^29.6.4",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^29.6.4",
     "rollup": "^2.47.0",
     "ts-jest": "^29.1.1",
