--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run makelist makelist-testnet"
+  command = "npm run makelist-testnet"
   publish = "lists"
 
 [[headers]]
