--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "makelist-tomo": "ts-node src/index.ts makelist tomo",
     "makelist-tomo-testnet": "ts-node src/index.ts makelist tomo-test",
     "makelist-vic-test": "ts-node src/index.ts makelist vic-test",
+    "makelist-b2-test": "ts-node src/index.ts makelist b2-test",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "fetch": "bun run index.ts fetch",
     "test": "jest",
